Jann 30/objects/CRS_CRSReviewContentWrapper__c.object
<CustomObject>
    <fields>
        <fullName>CRS_Review__c</fullName>
        <label>CRS Review</label>
        <referenceTo>CRS_Review__c</referenceTo>
        <relationshipLabel>CRS Review Attachments</relationshipLabel>
        <relationshipName>CRS_Review_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Draft .Supplemental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Document</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Dossier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final .Supplemental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Dossier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FileId__c</fullName>
        <label>FileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK(FileId__c, Filename__c , &apos;_blank&apos;)</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>CRS Review Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRSRevAttach{000000}</displayFormat>
        <label>Attachment Wrapper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRS Review Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>